@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 03-05-2005 added: basic authentication support to http reader. means authed rss feeds, authed internet playlists (thou the streams themself might not be authed). 
   - 03-05-2005 changed: Get/SeekPercentage now take floats.
   - 03-05-2005 added: Initial seek bar support - not currently implemented at the skin level.
   - 03-05-2005 changed: Increased PAPlayer output buffer size + added debug output if it drops down.
